--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@neondatabase/serverless": "^1.0.0",
     "cors": "^2.8.5",
     "cron": "^4.3.0",
