--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "pg": "^8.16.3",
     "react-native-reanimated": "^4.0.0"
   },
