--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-actions-sheet": "^10.1.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-webview": "13.15.0",
