--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "ioredis": "^5.9.2",
     "pg": "^8.16.3",
     "react-native-reanimated": "^4.0.0"
   },
