--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "sync-firebase": "node src/db/firebaseSync.js"
   },
   "keywords": [],
   "type": "module",
@@ -19,6 +20,8 @@
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "ioredis": "^5.9.2",
     "pg": "^8.16.3",
     "react-native-reanimated": "^4.0.0"
