--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "favicon": "./assets/images/app-icon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@react-native-voice/voice"
     ],
     "experiments": {
       "typedRoutes": true
