fix: remove unused voice plugin from app.json to fix build error

--- a/app.json
+++ b/app.json
@@ -28,8 +28,7 @@
       "favicon": "./assets/images/app-icon.png"
     },
     "plugins": [
-      "expo-router",
-      "@react-native-voice/voice"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
