Security: Replace real keys with placeholders in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 
 PORT=5001
-NODE_ENV=production
+NODE_ENV=development
 
 # Database (backend only)
-DATABASE_URL=***REMOVED***
+DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
 # Auth (backend only)
-CLERK_SECRET_KEY=***REMOVED***
+CLERK_SECRET_KEY=your_clerk_secret_key_here
 
 # AI (backend only)
-OPENROUTER_OPENAI_KEY=***REMOVED***
-OPENROUTER_MISTRAL_KEY=***REMOVED***
+OPENROUTER_OPENAI_KEY=your_openrouter_openai_key_here
+OPENROUTER_MISTRAL_KEY=your_openrouter_mistral_key_here
 
 # Redis (backend only)
-REDIS_URL=***REMOVED***
+REDIS_URL=redis://password@host:port
 
 # Firebase (backend only)
 FIREBASE_API_KEY=your_firebase_api_key
