--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "backgroundColor": "#0D0D0D"
       },
       "package": "com.meet.foody",
-      "usesCleartextTraffic": true
+      "versionCode": 1,
+      "usesCleartextTraffic": false
     },
     "web": {
       "bundler": "metro",
